[package]
name = "minimal-logging-attributes"
version = "0.1.0"
authors = ["RosieTheGhostie"]
edition = "2021"

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
quote = "1.0.37"
function-wrapper = "0.1.7"
proc-macro2 = "1.0.92"

[dependencies.syn]
version = "2.0"
features = ["full", "extra-traits"]

[dependencies.minimal-logging-macros]
version = "0.5.0"
path = "../minimal-logging-macros"
